# bronze

./: Cargo.toml  README.md
.VSCodeCounter/2023-10-16_14-10-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
schemas/: api_schema.json
src/: main.rs
src/ai_functions/: ai_func_frontend_engineer.rs  aifunc_architect.rs  aifunc_backend_engineer.rs  aifunc_dba.rs  aifunc_project_manager.rs  mod.rs
src/apis/: call_request.rs
src/helpers/: cli.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/base_agent/: base_agent.rs  base_traits.rs  mod.rs
src/models/project_manager/: project_manager.rs
src/models/team/: backend_engineer.rs  database_administrator.rs  devops_engineer.rs  junior_backend_engineer.rs  mod.rs  senior_backend_engineer.rs  solution_architect.rs  team_traits.rs
